tests/out/error/struct/no_field.out
tests/out/error/struct/no_field.in.bt:7:10 error: Foo has no field bad1
tests/out/error/struct/no_field.in.bt:9:12 error: Foo has no field bad2
